primera pagina web

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<li>Mrs. Cop 2</li>
 					<li>To the Beautiful You</li>
 					
-					ALIGN=right<img src="http://i1272.photobucket.com/albums/y389/chira13/Medical%20Top%20Team/tumblr_mtxi44NXIy1rns8u7o1_1280_zpsc2557ff5.jpg">
+					<img src="http://i1272.photobucket.com/albums/y389/chira13/Medical%20Top%20Team/tumblr_mtxi44NXIy1rns8u7o1_1280_zpsc2557ff5.jpg">
 				
 				</ul>
 			
